--- a/ar_index.html
+++ b/ar_index.html
@@ -4,7 +4,7 @@
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam;">
       <a-marker preset="hiro">
-        <a-entity fbx-model=”src: url(/path/to/nameOfFile.json);”>
+        <a-entity fbx-model=”src: url(models/gunbot.fbx);”>
         </a-entity>
       </a-marker>
   <a-entity camera>
